--- a/backend-clean/package.json
+++ b/backend-clean/package.json
@@ -30,16 +30,12 @@
     "lint": "eslint src --ext .ts,.js",
     "lint:fix": "eslint src --ext .ts,.js --fix",
     "env:check": "node -e \"console.log('NODE_ENV:', process.env.NODE_ENV)\"",
-    "hardhat:node": "hardhat node",
-    "hardhat:accounts": "hardhat accounts",
-    "hardhat:compile": "hardhat compile",
     "prepublishOnly": "npm run build"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0",
     "@prisma/adapter-pg": "^6.0.0",
     "@prisma/client": "5.22.0",
     "@sentry/node": "^7.99.0",
@@ -60,7 +56,6 @@
     "cors": "^2.8.5",
     "decimal.js": "^10.6.0",
     "dotenv": "^16.6.1",
-    "ethers": "^6.16.0",
     "express-rate-limit": "^8.2.1",
     "firebase-admin": "^12.7.0",
     "helmet": "^8.1.0",
@@ -77,11 +72,9 @@
     "speakeasy": "^2.0.0",
     "stripe": "^20.1.0",
     "validator": "^13.15.26",
-    "wallet-address-validator": "^0.2.4",
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "@types/decimal.js": "^0.0.32",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
@@ -90,12 +83,10 @@
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.3",
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
+    "jest": "^30.2.0",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "vercel": "^25.2.0",
-    "viem": "^2.43.5"
+    "typescript": "^5.9.3"
   }
 }
